--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -64,6 +64,13 @@
 
     <dependency>
       <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>26-ea+1</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
       <version>21.0.1</version>
     </dependency>
@@ -111,6 +118,7 @@
             <directory>src/main/resources</directory>
             <includes>
                 <include>**/*.fxml</include>
+                <include>**/*.png</include>
                 <include>**/hibernate.cfg.xml</include>
             </includes>
         </resource>
